# reinforce-tactics

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  MAP_EDITOR.md  README.md  REVIEW_advancedbot.md  REVIEW_codebase.md  REVIEW_maintainability.md  ROADMAP.md  kaggle_post_draft.md  main.py  main_backup.py  pyproject.toml  pytest.ini  requirements.txt  tournament_results_20251219_214148.json  tournament_standings_20251219_214148.csv
.github/workflows/: bot-tournament.yml  deploy-docusaurus.yml  lint.yml  pylint.yml  python-package.yml
assets/fonts/: README.md
benchmarks/ppo_vs_simplebot/: FLAT_DISCRETE_DESIGN.md  RESULTS.md
cli/: __init__.py  commands.py
configs/: README.md  alphazero.yaml  bc_scenarios.yaml  bootstrap.yaml  feudal_rl.yaml  maskable_ppo.yaml  maskable_ppo_colab_l4.yaml  ppo_baseline.yaml  self_play.yaml
configs/bootstrap_sweep/: v01_flat_low_003.yaml  v02_flat_mid_005.yaml  v03_flat_high_010.yaml  v04_aggressive_anneal_010_to_001_linear.yaml  v05_gentle_anneal_010_to_005_linear.yaml  v06_extend_schedule_to_late_stages.yaml  v07_cosine_all.yaml  v08_high_start_aggressive_015_to_001_linear.yaml  v09_low_start_007_to_003_linear.yaml  v10_baseline_plus_starter_schedule.yaml  v11_transition_aware_entropy.yaml  v15_lower_entropy_floors.yaml  v16_turn_penalty.yaml  v17_random_patience.yaml  v19_consolidate_random10.yaml  v22_reduced_units.yaml  v23_lower_random_threshold.yaml  v24_reproduce_deep_config.yaml  v25_bisect_random10_repro.yaml  v26_faithful_deep_reward_on_head.yaml  v27b_ablate_enemy_neutral_capture.yaml  v27c_ablate_enemy_owned_capture.yaml  v28_production_reward_fixed.yaml
configs/curriculum/: easy.yaml  hard.yaml  medium.yaml
configs/feudal/: feudal_rl.yaml
configs/imitation/: bc_beginner_warmstart.yaml  bc_scenarios.yaml  bc_skirmish_warmstart.yaml
configs/ppo/: bootstrap.yaml  bootstrap_validation.yaml  maskable_ppo.yaml  skirmish_bc_selfplay.yaml
configs/self_play/: self_play.yaml
docker/tournament/: .env.example  .gitignore  Dockerfile  README.md  config.json  config.schema.json  config.simple.json  docker-compose.yml  run_tournament.py
docs/: GYMNASIUM_HRL_REVIEW.md  IMPROVEMENT_PLAN.md  README.md  REVIEW_advancedbot.md  REVIEW_ppo_training.md  REVIEW_rl_pipeline_2026-07-24.md  ROADMAP.md  balance_analysis_lessons_learned.md  bootstrap_lessons_learned.md  bootstrap_runs_review.md  experiment_a_faithful_repro.md  experiment_b_bisect_plan.md  feudal_rl_review.md  implementation_status.md  index.html  kaggle_competition.md  timeline.md  vertex_training.md
docs-site/: README.md  docusaurus.config.ts  package-lock.json  package.json
docs-site/docs/: change-management.md  game-mechanics.md  implementation-status.md  intro.md  maps.mdx  timeline.md  tournament-system.md  tournaments.md  tournaments.mdx
docs-site/static/: CNAME
docs/jepa/: DESIGN.md
docs/proposals/: fog-of-war-proposal.md
eval/: eval_agent.py
examples/: README.md  llm_bot_demo.py  train_with_action_masking.py  train_with_bc_warmstart.py
game/: __init__.py  action_executor.py  bot_factory.py  game_loop.py  input_handler.py
kaggle-environments-update/: README.md
kaggle-environments-update/tools/: generate_game_sprites.py
maps/1v1/: 10x12_funnel_point.csv  18x18_center_mountains.csv  20x20_starter.csv  24x24_hard.csv  beginner.csv  cavalry_charge.csv  cleric_vigil.csv  corner_points.csv  crossroads.csv  demo_map_editor.csv  difficult_terrain.csv  funnel_point.csv  intermediate.csv  island_fortress.csv  last_stand.csv  mage_showdown.csv  mountain_snipers.csv  rogue_flank.csv  skirmish.csv  sorcerer_cabal.csv  starter.csv  the_narrows.csv  tower_rush.csv
maps/1v1v1/: disputed_crossroads.csv  the_trident.csv  three_islands.csv  triangle_arena.csv
maps/2v2/: beginner.csv
notebooks/: [Reinforce Tactics] PPO.ipynb  balance_analysis.ipynb  bootstrap_run_analysis.ipynb  bot_tournament.ipynb  feudal_rl_training.ipynb  kaggle_demo.ipynb  kaggle_environments_smoke_test.ipynb  llm_bot_tournament.ipynb  llm_bot_tournament_test.ipynb  ppo_6x6_beginner_training.ipynb  ppo_baseline_benchmark.ipynb  ppo_bootstrap.ipynb  ppo_training.ipynb
reinforcetactics/: __init__.py  constants.py
reinforcetactics/app/: __init__.py  bot_factory.py  game_loop.py  input_handler.py
reinforcetactics/assets/: __init__.py
reinforcetactics/cli/: __init__.py  commands.py
reinforcetactics/cloud/: __init__.py  storage.py
reinforcetactics/core/: __init__.py  game_state.py  grid.py  tile.py  unit.py  visibility.py
reinforcetactics/game/: __init__.py  (+7 more)
saves/: cavalry_charge_scenario.json  cleric_vigil_scenario.json  last_stand_scenario.json  mage_showdown_scenario.json  mountain_snipers_scenario.json  rogue_flank_scenario.json  skirmish_scenario.json  sorcerer_cabal_scenario.json
scripts/: ab_feudal_ar.py  adv_vs_med.py  build_bc_warmstart.py  eval_agent.py  experiment_a_setup.sh  gcp_launch.sh  generate_bootstrap_sweep.py  generate_map_previews.py  generate_unit_gifs.py  monitor_training.sh  render_replay_video.py  run_tournament.sh  split_spritesheet.py  stop_training.sh  tournament.py
tests/: TEST_PLAN.md  __init__.py  conftest.py  test_advanced_bot.py  test_alphazero.py  test_autoregressive_head.py  test_autoregressive_rollout.py  test_balanced_random_bot.py  test_bootstrap.py  test_bot_base.py  test_clipboard.py  test_cloud_storage.py  test_engine_overrides.py  test_eval_agent.py  test_feudal_rl.py  test_feudal_rl_integration.py  test_fog_of_war.py  test_fonts.py  test_game_state.py  test_gym_env.py  test_imitation.py  test_input_handler.py  test_kaggle_env.py  test_kaggle_env_make.py  test_language_menu.py  test_llm_bot.py  test_llm_prompts.py  test_map_editor.py  test_map_preview.py  test_master_bot.py  test_mechanics.py  test_medium_bot.py  test_menu_layout.py  test_menus.py  test_mixed_bot.py  test_model_bot.py  test_model_bot_feudal.py  test_noop_bot.py  test_observation.py  test_purchase_exploration.py  (+17 more)
train/: train_alphazero.py  train_eval.py  train_feudal_rl.py  train_self_play.py
utils/: __init__.py  dependency_checker.py
(+166 files in other folders)
