[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "reinforcetactics"
version = "0.1.1"
description = "A turn-based strategy game built with Pygame and Gymnasium for reinforcement learning research"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "kuds" },
]
keywords = ["reinforcement-learning", "strategy-game", "gymnasium", "pygame", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
]
dependencies = [
    "gymnasium",
    "pettingzoo",
    "pygame-ce",
    "stable-baselines3",
    "sb3-contrib",
    "numpy",
    "opencv-python",
    "torch",
    "tensorboard",
    "matplotlib",
    "pandas",
]

[project.optional-dependencies]
llm = [
    "openai",
    "anthropic",
    "google-genai",
]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/kuds/reinforce-tactics"
Documentation = "https://reinforcetactics.com"
Repository = "https://github.com/kuds/reinforce-tactics"
Issues = "https://github.com/kuds/reinforce-tactics/issues"

[project.scripts]
reinforce-tactics = "main:main"

[tool.setuptools.packages.find]
include = ["reinforcetactics*", "cli*", "utils*", "game*"]
exclude = ["tests*", "docs*", "docs-site*", "examples*", "notebooks*", "scripts*", "train*", "eval*", "docker*", "maps*"]
