[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "reinforcetactics"
version = "0.2.0"
description = "A turn-based strategy game built with Pygame and Gymnasium for reinforcement learning research"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "kuds" },
]
keywords = ["reinforcement-learning", "strategy-game", "gymnasium", "pygame", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
]
dependencies = [
    "gymnasium",
    "pettingzoo",
    "stable-baselines3",
    "sb3-contrib",
    "numpy",
    "torch",
    "tensorboard",
    "pandas",
]

[project.optional-dependencies]
gui = [
    "pygame-ce",
    "opencv-python",
    "matplotlib",
    "Pillow",
]
llm = [
    "openai",
    "anthropic",
    "google-genai",
]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "ruff",
    "mypy",
]
all = [
    "reinforcetactics[gui]",
    "reinforcetactics[llm]",
    "reinforcetactics[dev]",
]

[project.urls]
Homepage = "https://github.com/kuds/reinforce-tactics"
Documentation = "https://reinforcetactics.com"
Repository = "https://github.com/kuds/reinforce-tactics"
Issues = "https://github.com/kuds/reinforce-tactics/issues"

[project.scripts]
reinforce-tactics = "main:main"

[tool.setuptools.packages.find]
include = ["reinforcetactics*", "cli*", "utils*", "game*"]
exclude = ["tests*", "docs*", "docs-site*", "examples*", "notebooks*", "scripts*", "train*", "eval*", "docker*", "maps*"]

[tool.ruff]
target-version = "py310"
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "C901",   # function complexity - tracked but not blocking
]

[tool.ruff.lint.per-file-ignores]
"notebooks/**" = ["E402"]  # imports after code is normal in notebooks

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true

# Gradually enable stricter checking per-module as types are improved
# Reduced from 25 files → 9 files (67 remaining errors).
# TODO: Fix remaining type errors and remove this override entirely.
# Remaining issues: dict[str, object] unpacking, Optional narrowing,
# and pandas DataFrame typing in these modules.
[[tool.mypy.overrides]]
module = [
    "reinforcetactics.core.game_state",
    "reinforcetactics.game.bot",
    "reinforcetactics.rl.alphazero_trainer",
    "reinforcetactics.rl.feudal_rl",
    "reinforcetactics.rl.masking",
    "reinforcetactics.rl.mcts",
    "reinforcetactics.tournament.bots",
    "reinforcetactics.ui.menus.game_setup.player_config_menu",
    "reinforcetactics.ui.menus.settings.api_keys_menu",
    "reinforcetactics.rl.self_play",
]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "--cov=reinforcetactics --cov-fail-under=50"

[tool.coverage.run]
source = ["reinforcetactics"]
omit = ["reinforcetactics/ui/*"]

[tool.coverage.report]
fail_under = 50
